# Naive-Bayes

./: README.md  a.md  app.py  main.py  pyproject.toml
